chore(governance): configure 6-stage lifecycle, modular rules, skills, and pr automation